kubernetes/q-swiper/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: q-swiper
  labels:
    app: q-swiper

spec:
  replicas: 1
  selector:
    matchLabels:
      app: q-swiper
  template:
    metadata:
      labels:
        app: q-swiper
    spec:
      automountServiceAccountToken: false
      containers:
        - name: q-swiper
          image: ghcr.io/q-swiper/map-generator:e4e7d910d79db1d1825707d0b28b7caeb5b05f67
          ports:
            - name: web
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
