kubernetes/q-swiper/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: q-swiper

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: q-swiper
